# dataprep

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  DC_DBLP_tut.html  DC_Spotify_tut.html  DC_Yelp_tut.html  EDA_plot#2.py  EDA_plot.py  EDA_plot_2.py  EDA_test.py  EDA_test_2.py  Justfile  LICENSE  Live.csv  Pipfile  README.md  Untitled.ipynb  acknowledgement.html  build.py  codecov.yaml  contribute.html  data_connector.html  dataprep.data_connector.html  dataprep.eda.basic.html  dataprep.eda.correlation.html  dataprep.eda.html  dataprep.eda.missing.html  dataprep.eda.outlier.html  dataprep.html  dataprep.tests.eda.html  dataprep.tests.html  demo.ipynb  genindex.html  index.html  (+22 more)
.circleci/: config.yml
.github/: pull_request_template.md  requirements.txt  runTests.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_cleaning.md  bug_report_connector.md  bug_report_eda.md  feature_request.md  task-template.md
.github/workflow/: benchmark.yml
.github/workflows/: benchmark.yml  ci.yml  clean_gui.yml  release.yml  test_trigger.yml
_modules/: dataprep.html  index.html
_modules/dataprep/: errors.html  utils.html
_sources/: data_connector.rst.txt  dataprep.eda.basic.rst.txt  dataprep.eda.rst.txt  dataprep.rst.txt  installation.rst.txt  modules.rst.txt  plot_correlation.rst.txt
_sources/api_reference/: dataprep.clean.rst.txt  dataprep.eda.distribution.rst.txt  dataprep.rst.txt
_sources/case_study/: titanic.ipynb.txt
_sources/eda/: introduction.rst.txt  plot.rst.txt  plot_correlation.rst.txt  plot_missing.ipynb.txt
_sources/user_guide/: user_guide.rst.txt
_static/: documentation_options.js
api_reference/: dataprep.clean.html  dataprep.connector.html  dataprep.data_connector.html  dataprep.eda.basic.html  dataprep.eda.correlation.html  dataprep.eda.create_report.html  dataprep.eda.diff.html  dataprep.eda.distribution.html  dataprep.eda.html  dataprep.eda.missing.html  dataprep.html
case_study/: house_price.html  titanic.html  titanic.ipynb
case_study/.ipynb_checkpoints/: house_price-checkpoint.html  house_price-checkpoint.ipynb  titanic-checkpoint.html
conda.recipe/dataprep/: meta.yaml
dataprep/: __init__.py  errors.py  progress_bar.py  test.ipynb  test.py  utils.py
dataprep/assets/: ellipse.npz  english_stopwords.py
dataprep/clean/: __init__.py  address_utils.py  clean_ad_nrt.py  clean_address.py  clean_al_nipt.py  clean_ar_cbu.py  clean_ar_cuit.py  clean_ar_dni.py  clean_at_uid.py  clean_at_vnr.py  clean_au_abn.py  clean_au_acn.py  clean_au_tfn.py  clean_be_iban.py  clean_be_vat.py  clean_bg_egn.py  clean_bg_pnf.py  clean_bg_vat.py  clean_bic.py  clean_bitcoin.py  clean_br_cnpj.py  clean_br_cpf.py  clean_by_unp.py  clean_ca_bn.py  clean_ca_sin.py  clean_casrn.py  clean_ch_esr.py  clean_ch_ssn.py  clean_ch_uid.py  clean_ch_vat.py  clean_cl_rut.py  clean_cn_ric.py  clean_cn_uscc.py  clean_co_nit.py  clean_country.py  clean_cr_cpf.py  clean_cr_cpj.py  clean_cr_cr.py  clean_cu_ni.py  clean_currency.py  (+143 more)
dataprep/connector/: __init__.py  config_generator.py  config_manager.py  connector.py  connector_UI.py  errors.py  implicit_database.py  info.py  info_ui.py  int_ref.py  ref.py  schema.json  schema.py  sql.py  throttle.py  throttler.py  utils.py
dataprep/data_connector/: __init__.py  config_generator.py  config_manager.py  connector.py  demo.ipynb  errors.py  implicit_database.py  schema.json  types.py
dataprep/datasets/: __init__.py  _base.py
dataprep/eda/: EDA_plot.py  EDA_plot_2.py  __init__.py  common.py  configs 2.py  configs.py  container.py  data_array.py  dtypes.py  dtypes_v2.py  eda_frame.py  eda_plot.py  eda_plot_2.py  eda_plot_corr.py  intermediate.py  palette.py  plot_df.py  progress_bar.py  report.py  staged.py  utils.py
dataprep/lineage/: __init__.py  lx.py
dataprep/pipeline/: __init__.py
dev/bench/: data.js
docs/source/: DC_DBLP_tut.rst  DC_Spotify_tut.rst  DC_Yelp_tut.rst  acknowledgement.rst  conf.py  contribute.rst  data_connector.rst  dataprep.data_connector.rst  dataprep.eda.basic.rst  dataprep.eda.correlation.rst  dataprep.eda.missing.rst  dataprep.eda.outlier.rst  dataprep.eda.rst  dataprep.rst  dataprep.tests.eda.rst  dataprep.tests.rst  index.rst  installation.rst  introduction.rst  plot.rst  plot_correlation.rst  plot_missing.rst
eda/: introduction.html  plot.html  plot_correlation.html  plot_missing.html
examples/: DataConnector.ipynb  DataConnector_CovidTracking.ipynb  DataConnector_DBLP.ipynb  DataConnector_Finnhub.ipynb  DataConnector_Twitter.ipynb  DataConnector_Yelp.ipynb  DataConnector_Youtube.ipynb  EDA.ipynb  EDA_COVID19_SouthKorea.ipynb  house_price.ipynb
profiling/: .dockerignore  Distributed Experiments.ipynb  Dockerfile  Justfile  Performance Analysis.ipynb  Single HDFS.ipynb  dataprep_vs_pandas_profiling.ipynb  profiling-analysis.py  profiling.py
profiling/benchmarks/: create_report_dp.py  create_report_pp.py.disabled  dask-dp-corr.py.disabled  lib.py  pandas-corr.py.disabled  pandas-dp-corr.py.disabled  plot-missing-new.py.disabled  plot-missing-old.py.disabled  plot-pandas.py.disabled
profiling/docker/: Dockerfile  entrypoint.sh  hdfs-site.xml
scripts/: gen-setup.py  release-note.py
user_guide/: user_guide.html
user_guide/clean/: clean_address.html  clean_address.ipynb  clean_au_abn.html  clean_au_abn.ipynb  clean_au_acn.html  clean_au_acn.ipynb  clean_au_tfn.html  clean_au_tfn.ipynb  clean_be_iban.html  clean_be_iban.ipynb  clean_be_vat.html  clean_be_vat.ipynb  clean_bg_egn.html  clean_bg_egn.ipynb  clean_bg_pnf.html  clean_bg_pnf.ipynb  clean_bg_vat.html  clean_bg_vat.ipynb  clean_br_cnpj.html  clean_br_cnpj.ipynb  clean_br_cpf.html  clean_br_cpf.ipynb  clean_by_unp.html  clean_by_unp.ipynb  clean_ca_bn.html  clean_ca_bn.ipynb  clean_ca_sin.html  clean_ca_sin.ipynb  clean_ch_esr.html  clean_ch_esr.ipynb  clean_ch_ssn.html  clean_ch_ssn.ipynb  clean_ch_uid.html  clean_ch_uid.ipynb  clean_ch_vat.html  clean_ch_vat.ipynb  clean_cl_rut.html  clean_cl_rut.ipynb  clean_cn_ric.html  (+243 more)
youtube/: _meta.json  videos.json
(+866 files in other folders)
